syntax = "proto3";

package movie;

option go_package = "internal/infrastructure/grpc/moviepb";

message Movie {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string release_date = 4;
}

message GetMovieRequest {
  int64 id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message ListMoviesRequest {}

message ListMoviesResponse {
  repeated Movie movies = 1;
}

service MovieService {
  rpc GetMovie (GetMovieRequest) returns (GetMovieResponse);
  rpc ListMovies (ListMoviesRequest) returns (ListMoviesResponse);
}